--- a/css/main.css
+++ b/css/main.css
@@ -849,9 +849,9 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
