--- a/sass/components/_approach.scss
+++ b/sass/components/_approach.scss
@@ -13,7 +13,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  justify-content: space-between;
+  justify-content: center;
 
   @media screen and (min-width: 768px) {
     display: flex;
