--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,6 +3,9 @@
 }
 .team__container {
   padding: 94px 15px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
 }
 .team__slogan {
   margin-bottom: 50px;
