--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -132,13 +132,13 @@
   border-radius: 2px;
   position: absolute;
   bottom: -1px;
-  // transform: translateY(33px);
+  transform: translateY(33px);
 }
-// @media screen and (max-width: 1199px) {
-//   .nav__page--active .nav__page::after {
-//     transform: translateY(22px);
-//   }
-// }
+@media screen and (max-width: 1199px) {
+  .nav__page--active .nav__page::after {
+    transform: translateY(22px);
+  }
+}
 
 @media screen and (max-width: 768px) {
   .nav__page--active .nav__page::after {
