--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -66,7 +66,7 @@
   margin-left: auto;
   margin-right: auto;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 480px) {
   .footer-join__containers {
     margin-top: 60px;
   }
@@ -90,7 +90,7 @@
 }
 
 .subscription__imput {
-  width: 348px;
+  width: 100%;
   margin-top: 20px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
