--- a/css/main.css
+++ b/css/main.css
@@ -1645,7 +1645,7 @@ li {
   margin-right: auto;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 440px) {
   .footer-join__containers {
     margin-top: 60px;
   }
@@ -1655,9 +1655,13 @@ li {
 .subscription {
   margin-left: auto;
   margin-right: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 844px) {
   .subscription {
     margin-top: 60px;
   }
@@ -1672,7 +1676,7 @@ li {
 }
 
 .subscription__imput {
-  width: 100%;
+  max-width: 100%;
   margin-top: 20px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
